kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-pyramid-postgres
      service: postgres
  template:
    metadata:
      labels:
        app: python-pyramid-postgres
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          imagePullPolicy: IfNotPresent
          command: ["psql", "-U", "postgres", "-d", "postgres", "-f", "/var/lib/postgresql/data/init_json_sql.sql"]
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data-mount
      volumes:
        - name: postgres-data-mount
          persistentVolumeClaim:
            claimName: postgres-volume-claim
