kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: python-pyramid-postgres
    service: postgres
spec:
  type: NodePort # kubectl expose ...
  selector:
    app: python-pyramid-postgres
    service: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
