kubernetes/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-pyramid
  labels:
    app: python-pyramid-postgres
    service: python-pyramid
spec:
  type: NodePort # kubectl expose ...
  selector:
    app: python-pyramid-postgres
    service: python-pyramid
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      # nodePort: 30000
