kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
  - host: python-pyramid
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-pyramid
            port:
              number: 8000
